--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/Theme.Expo2023app"
         tools:targetApi="31">
@@ -35,9 +35,6 @@
             android:exported="false" />
         <activity
             android:name=".VistaAgendar"
-            android:exported="false" />
-        <activity
-            android:name=".CardAgendar"
             android:exported="false" />
         <activity
             android:name=".Factura"
